<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Droid_SCEP</string>

    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="key_size">Key Size</string>
    <string name="import_password">Keystore/File Password</string>
    <string name="enrollment_challenge_passphrase">Enrollment Challenge Passphrase</string>
    <string name="enrollment_profile">Enrollment Profile</string>
    <string name="scep_server_url">SCEP Server URL</string>
    <string name="request">Send Request</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="poll">Poll Certificate</string>
    <string name="ok">OK</string>
    <string name="no_request_pending">No request pending</string>
    <string name="bad_request_help">Server declined the SCEP request. Please check your enrollment challenge password and try again.</string>
    <string name="request_pending_help">Your certificate request is currently pending. Please come back later to download your certificate after the administrator approved the request.</string>
    <string name="optional">(optional)</string>
    <string name="fork_based_on">A fork based on:</string>
    <string name="using_the_jscep_library">Using the jscep library:</string>
    <string name="general_settings">General Settings</string>
    <string name="new_request">New Request</string>
    <string name="poll_pending_request">Poll Pending Request</string>
    <string name="request_already_sent">Request already sent</string>
    <string name="overwrite_pending_request">A certificate request is already pending. Are you sure you want to submit a new request?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please wait…</string>
    <string name="certificates_to_monitor">Certificates to monitor\n(one alias name per line)</string>
    <string name="days_before_warning">Days before Warning</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="notification_permission">Notification Permission…</string>
    <string name="add">Add…</string>
    <string name="add_to_monitoring">Do you want to monitor the expiration date of the newly certificate?</string>
    <string name="output">Output</string>
    <string name="import_to_android_keystore">Import to Android keystore</string>
    <string name="save_to_file">Save to file</string>
    <string name="scep">SCEP</string>
    <string name="monitor">Monitor</string>
    <string name="generate_csr_title">Generate Certificate Signing Request (CSR)</string>
    <string name="subject_distinguished_name">Subject Distinguished Name</string>
    <string name="e_mail_address">RFC 822 name</string>
    <string name="pem_key_file">PEM key file</string>
    <string name="choose">Choose…</string>
    <string name="pem_csr_file">CSR file</string>
    <string name="generate_csr">Generate CSR</string>
    <string name="pem_p12_converter_title">Convert PEM cert with key to PKCS12</string>
    <string name="pem_cert_file">PEM cert file</string>
    <string name="password_for_p12">Password for PKCS12 container</string>
    <string name="save_as_p12_pfx">Save as .p12/.pfx</string>
    <string name="extras">Tools</string>
    <string name="csr_generated">CSR generated</string>
    <string name="done">Done</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="ca_fingerprint">CA Fingerprint (MD5)</string>
    <string name="user_principal_name">User Principal Name (UPN)</string>
    <string name="masterplan_workforce_management">MASTERPLAN Workforce Management</string>
    <string name="open_computer_orchestration">Open Computer Orchestration</string>

    <string name="link_github" translatable="false">https://github.com/schorschii/Droid_SCEP</string>
    <string name="link_github_base" translatable="false">https://github.com/gjyoung1974/Droid_Scep2</string>
    <string name="link_github_jscep" translatable="false">https://github.com/seize-the-dave/jscep</string>
    <string name="link_github_oco" translatable="false">https://github.com/schorschii/OCO-Server</string>
    <string name="link_github_masterplan" translatable="false">https://github.com/schorschii/MASTERPLAN</string>
    <string name="default_server_url" translatable="false">https://SERVERNAME/certsrv/mscep/mscep.dll/pkiclient.exe</string>
    <string name="default_subject_dn" translatable="false">cn=MyDevice,ou=test,o=testco,c=US</string>
    <string name="default_keystore_alias" translatable="false">SCEP Certificate</string>
    <string name="default_enrollment_profile" translatable="false" />
    <string name="default_enrollment_challenge" translatable="false" />
    <string name="default_warn_days" translatable="false">21</string>
    <string name="default_renew_days" translatable="false">28</string>
    <string name="default_rsa_len" translatable="false">4096</string>
    <string name="requires_delegated_scope_cert_install" translatable="false">Requires delegated scope CERT_INSTALL set via MDM!</string>
    <string name="requires_delegated_scope_cert_selection" translatable="false">Requires delegated scope CERT_SELECTION set via MDM!</string>

    <string-array name="rsa_lens" translatable="false">
        <item>1024</item>
        <item>2048</item>
        <item>4096</item>
        <item>8192</item>
    </string-array>

</resources>
