<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScepFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general_settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textViewScepUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/scep_server_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextScepUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textUri"
            android:labelFor="@id/textViewScepUrl"
            android:text="@string/default_server_url" />

        <TextView
            android:id="@+id/textViewOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/output"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioButtonImportToAndroidKeystore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/import_to_android_keystore" />
            <RadioButton
                android:id="@+id/radioButtonSaveToFile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_to_file" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewKeystorePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/import_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextKeystorePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/optional"
            android:inputType="textPassword"
            android:labelFor="@id/textViewKeystorePassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/new_request"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textViewCaFingerprint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/ca_fingerprint"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/exitTextCaFingerprint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/textViewCaFingerprint"
            android:hint="@string/optional" />

        <TextView
            android:id="@+id/textViewCommonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/subject_distinguished_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/exitTextCommonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/textViewCommonName"
            android:text="@string/default_subject_dn" />

        <TextView
            android:id="@+id/textViewUpn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/user_principal_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/exitTextUpn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:labelFor="@id/textViewUpn" />

        <TextView
            android:id="@+id/textViewEnrollmentChallenge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/enrollment_challenge_passphrase"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextEnrollmentChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:labelFor="@id/textViewEnrollmentChallenge" />

        <TextView
            android:id="@+id/textViewEnrollmentProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/enrollment_profile"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/editTextEnrollmentProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/optional"
            android:labelFor="@id/textViewEnrollmentProfile"
            android:text="@string/default_enrollment_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/key_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Spinner
            android:id="@+id/spinnerKeySize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/rsa_lens"
            android:prompt="@string/key_size" />

        <Button
            android:id="@+id/buttonRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/request" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/poll_pending_request"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/textViewTransactionId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/transaction_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <EditText
            android:id="@+id/exitTextTransactionId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:labelFor="@id/textViewTransactionId" />

        <Button
            android:id="@+id/buttonPoll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="14dp"
            android:text="@string/poll" />

    </LinearLayout>
</ScrollView>
