<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="14dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scep_server_url"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/editTextScepUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/scep_server_url"
        android:inputType="textUri"
        android:text="@string/default_server_url" />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject_dn"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/exitTextCommonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject_dn"
        android:text="@string/default_subject_dn" />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enrollment_challenge_passphrase"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/editTextEnrollmentChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enrollment_challenge_passphrase"
        android:inputType="textPassword"
        android:text="3B78E1F19B0FF9F4" />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/import_password"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <EditText
        android:id="@+id/editTextImportPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/import_password"
        android:inputType="textPassword"
        android:text="Password1!" />

    <TextView
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <Spinner
        android:id="@+id/spinnerKeySize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rsalen_arrays"
        android:prompt="@string/key_size" />

    <Button
        android:id="@+id/buttonEnroll"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClickEnroll"
        android:text="@string/enroll" />

</LinearLayout>
